update jnlp-agent-alpine with root

--- a/jnlp-agent-alpine/Dockerfile
+++ b/jnlp-agent-alpine/Dockerfile
@@ -88,15 +88,13 @@ ENV DOCKER_TLS_CERTDIR=/certs
 # also, ensure the directory pre-exists and has wide enough permissions for "dockerd-entrypoint.sh" to create subdirectories, even when run in "rootless" mode
 RUN mkdir /certs /certs/client && chmod 1777 /certs /certs/client
 
-RUN usermod -aG docker jenkins
-RUN usermod -aG root jenkins
 
 ### add docker end. ####
 
 ADD kubectlv1.20.1 /usr/bin/kubectl
 RUN chmod +x /usr/bin/kubectl
 
-##
-USER ${user}
+#
+#USER ${user}
 
 ENTRYPOINT ["jenkins-agent"]
